tests/neg/i14705.scala
//> using options -Xfatal-warnings

val n = Nil
val b = n.head.isInstanceOf[String] // error

